[Upd] Migrate Keycloak-specific configuration to general OAuth2.